# debug_macos_build_failure_pgrx

./: Cargo.toml  hello_pg.control
src/: lib.rs
